--- a/EA2/EA2.ipynb
+++ b/EA2/EA2.ipynb
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "nbgrader": {
      "grade": false,
@@ -229,21 +229,21 @@
     "    c_new = c + dt * v\n",
     "\n",
     "    # Kollision mit linken/rechten Wänden\n",
-    "    if c_new[0] < 0:  # Wenn der Ball die linke Wand trifft\n",
+    "    if c_new[0] <= 0:  # Wenn der Ball die linke Wand trifft\n",
     "        dt2 = abs(c_new[0]) / abs(v[0])\n",
     "        v[0] *= -1\n",
     "        c_new[0] = dt2 * v[0]\n",
-    "    elif c_new[0] > xmax:  # Wenn der Ball die rechte Wand trifft\n",
+    "    elif c_new[0] >= xmax:  # Wenn der Ball die rechte Wand trifft\n",
     "        dt2 = (c_new[0] - xmax) / abs(v[0])\n",
     "        v[0] *= -1\n",
     "        c_new[0] = xmax - dt2 * v[0]\n",
     "\n",
     "    # Kollision mit oberer/unterer Wand\n",
-    "    if c_new[1] < 0:  # Wenn der Ball den Boden trifft\n",
+    "    if c_new[1] <= 0:  # Wenn der Ball den Boden trifft\n",
     "        dt2 = abs(c_new[1]) / abs(v[1])\n",
     "        v[1] *= -1\n",
     "        c_new[1] = dt2 * v[1]\n",
-    "    elif c_new[1] > ymax:  # Wenn der Ball die obere Wand trifft\n",
+    "    elif c_new[1] >= ymax:  # Wenn der Ball die obere Wand trifft\n",
     "        dt2 = (c_new[1] - ymax) / abs(v[1])\n",
     "        v[1] *= -1\n",
     "        c_new[1] = ymax - dt2 * v[1]\n",
@@ -441,16 +441,22 @@
     "    # Kollision mit linken/rechten Wänden\n",
     "    left_wall = c_new[:, 0] <= 0 # NumPy Verktorisierung der Vergleichoperation <=\n",
     "    right_wall = c_new[:, 0] >= xmax # NumPy Verktorisierung der Vergleichoperation >=\n",
-    "    v[left_wall | right_wall, 0] *= -1 # NumPy Vektorisierung für ODER-Operation von booleschen Arrays\n",
-    "    c_new[left_wall, 0] = dt * v[left_wall, 0] # NumPy Vektorisierung der Operation mit Matrizen\n",
-    "    c_new[right_wall, 0] = xmax + dt * v[right_wall, 0] # NumPy Vektorisierung der Operationen mit Matrizen\n",
+    "    if np.any(left_wall | right_wall):\n",
+    "        dt2_left_wall = abs(c_new[left_wall, 0]) / abs(v[left_wall, 0]) # NumPy Vektorisierung für /-Operation\n",
+    "        dt2_right_wall = (abs(c_new[right_wall,0]) - xmax) / abs(v[right_wall, 0]) # NumPy Vektorisierung für /-Operation\n",
+    "        v[left_wall | right_wall, 0] *= -1 # NumPy Vektorisierung für ODER-Operation von booleschen Arrays\n",
+    "        c_new[left_wall, 0] = dt2_left_wall * v[left_wall, 0] # NumPy Vektorisierung der Operation mit Matrizen\n",
+    "        c_new[right_wall, 0] = xmax - dt2_right_wall * v[right_wall, 0] # NumPy Vektorisierung der Operationen mit Matrizen\n",
     "\n",
-    "    # Kollision mit oberer/unterer Wand\n",
+    "    # Kollision mit oberer/unterer Wandd\n",
     "    bottom = c_new[:, 1] <= 0\n",
     "    top = c_new[:, 1] >= ymax\n",
-    "    v[bottom | top, 1] *= -1\n",
-    "    c_new[bottom, 1] = dt * v[bottom, 1]\n",
-    "    c_new[top, 1] = ymax + dt * v[top, 1]\n",
+    "    if np.any(bottom | top):\n",
+    "        dt2_bottom = abs(c_new[bottom, 1]) / abs(v[bottom, 1])\n",
+    "        dt2_top = (abs(c_new[top, 1]) - ymax) / abs(v[top, 1])\n",
+    "        v[bottom | top, 1] *= -1\n",
+    "        c_new[bottom, 1] = dt2_bottom * v[bottom, 1]\n",
+    "        c_new[top, 1] = ymax - dt2_top * v[top, 1]\n",
     "\n",
     "    return c_new, v"
    ]
@@ -475,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "nbgrader": {
      "grade": false,
@@ -573,16 +579,22 @@
     "    # Kollision mit linken/rechten Wänden\n",
     "    left_wall = c_new[:, 0] <= 0 # NumPy Verktorisierung der Vergleichoperation <=\n",
     "    right_wall = c_new[:, 0] >= xmax # NumPy Verktorisierung der Vergleichoperation >=\n",
-    "    v[left_wall | right_wall, 0] *= -1 # NumPy Vektorisierung für ODER-Operation von booleschen Arrays\n",
-    "    c_new[left_wall, 0] = dt * v[left_wall, 0] # NumPy Vektorisierung der Operation mit Matrizen\n",
-    "    c_new[right_wall, 0] = xmax + dt * v[right_wall, 0] # NumPy Vektorisierung der Operationen mit Matrizen\n",
+    "    if np.any(left_wall | right_wall):\n",
+    "        dt2_left_wall = abs(c_new[left_wall, 0]) / abs(v[left_wall, 0]) # NumPy Vektorisierung für /-Operation\n",
+    "        dt2_right_wall = (abs(c_new[right_wall,0]) - xmax) / abs(v[right_wall, 0]) # NumPy Vektorisierung für /-Operation\n",
+    "        v[left_wall | right_wall, 0] *= -1 # NumPy Vektorisierung für ODER-Operation von booleschen Arrays\n",
+    "        c_new[left_wall, 0] = dt2_left_wall * v[left_wall, 0] # NumPy Vektorisierung der Operation mit Matrizen\n",
+    "        c_new[right_wall, 0] = xmax - dt2_right_wall * v[right_wall, 0] # NumPy Vektorisierung der Operationen mit Matrizen\n",
     "\n",
-    "    # Kollision mit oberer/unterer Wand\n",
+    "    # Kollision mit oberer/unterer Wandd\n",
     "    bottom = c_new[:, 1] <= 0\n",
     "    top = c_new[:, 1] >= ymax\n",
-    "    v[bottom | top, 1] *= -1\n",
-    "    c_new[bottom, 1] = dt * v[bottom, 1]\n",
-    "    c_new[top, 1] = ymax + dt * v[top, 1]\n",
+    "    if np.any(bottom | top):\n",
+    "        dt2_bottom = abs(c_new[bottom, 1]) / abs(v[bottom, 1])\n",
+    "        dt2_top = (abs(c_new[top, 1]) - ymax) / abs(v[top, 1])\n",
+    "        v[bottom | top, 1] *= -1\n",
+    "        c_new[bottom, 1] = dt2_bottom * v[bottom, 1]\n",
+    "        c_new[top, 1] = ymax - dt2_top * v[top, 1]\n",
     "\n",
     "    return c_new, v\n",
     "\n",
@@ -865,16 +877,22 @@
     "    # Kollision mit linken/rechten Wänden\n",
     "    left_wall = c_new[:, 0] <= 0 # NumPy Verktorisierung der Vergleichoperation <=\n",
     "    right_wall = c_new[:, 0] >= xmax # NumPy Verktorisierung der Vergleichoperation >=\n",
-    "    v[left_wall | right_wall, 0] *= -1 # NumPy Vektorisierung für ODER-Operation von booleschen Arrays\n",
-    "    c_new[left_wall, 0] = dt * v[left_wall, 0] # NumPy Vektorisierung der Operation mit Matrizen\n",
-    "    c_new[right_wall, 0] = xmax + dt * v[right_wall, 0] # NumPy Vektorisierung der Operationen mit Matrizen\n",
+    "    if np.any(left_wall | right_wall):\n",
+    "        dt2_left_wall = abs(c_new[left_wall, 0]) / abs(v[left_wall, 0]) # NumPy Vektorisierung für /-Operation\n",
+    "        dt2_right_wall = (abs(c_new[right_wall,0]) - xmax) / abs(v[right_wall, 0]) # NumPy Vektorisierung für /-Operation\n",
+    "        v[left_wall | right_wall, 0] *= -1 # NumPy Vektorisierung für ODER-Operation von booleschen Arrays\n",
+    "        c_new[left_wall, 0] = dt2_left_wall * v[left_wall, 0] # NumPy Vektorisierung der Operation mit Matrizen\n",
+    "        c_new[right_wall, 0] = xmax - dt2_right_wall * v[right_wall, 0] # NumPy Vektorisierung der Operationen mit Matrizen\n",
     "\n",
-    "    # Kollision mit oberer/unterer Wand\n",
+    "    # Kollision mit oberer/unterer Wandd\n",
     "    bottom = c_new[:, 1] <= 0\n",
     "    top = c_new[:, 1] >= ymax\n",
-    "    v[bottom | top, 1] *= -1\n",
-    "    c_new[bottom, 1] = dt * v[bottom, 1]\n",
-    "    c_new[top, 1] = ymax + dt * v[top, 1]\n",
+    "    if np.any(bottom | top):\n",
+    "        dt2_bottom = abs(c_new[bottom, 1]) / abs(v[bottom, 1])\n",
+    "        dt2_top = (abs(c_new[top, 1]) - ymax) / abs(v[top, 1])\n",
+    "        v[bottom | top, 1] *= -1\n",
+    "        c_new[bottom, 1] = dt2_bottom * v[bottom, 1]\n",
+    "        c_new[top, 1] = ymax - dt2_top * v[top, 1]\n",
     "\n",
     "    return c_new, v\n",
     "\n",
@@ -1147,16 +1165,22 @@
     "    # Kollision mit linken/rechten Wänden\n",
     "    left_wall = c_new[:, 0] <= 0 # NumPy Verktorisierung der Vergleichoperation <=\n",
     "    right_wall = c_new[:, 0] >= xmax # NumPy Verktorisierung der Vergleichoperation >=\n",
-    "    v[left_wall | right_wall, 0] *= -1 # NumPy Vektorisierung für ODER-Operation von booleschen Arrays\n",
-    "    c_new[left_wall, 0] = dt * v[left_wall, 0] # NumPy Vektorisierung der Operation mit Matrizen\n",
-    "    c_new[right_wall, 0] = xmax + dt * v[right_wall, 0] # NumPy Vektorisierung der Operationen mit Matrizen\n",
+    "    if np.any(left_wall | right_wall):\n",
+    "        dt2_left_wall = abs(c_new[left_wall, 0]) / abs(v[left_wall, 0]) # NumPy Vektorisierung für /-Operation\n",
+    "        dt2_right_wall = (abs(c_new[right_wall,0]) - xmax) / abs(v[right_wall, 0]) # NumPy Vektorisierung für /-Operation\n",
+    "        v[left_wall | right_wall, 0] *= -1 # NumPy Vektorisierung für ODER-Operation von booleschen Arrays\n",
+    "        c_new[left_wall, 0] = dt2_left_wall * v[left_wall, 0] # NumPy Vektorisierung der Operation mit Matrizen\n",
+    "        c_new[right_wall, 0] = xmax - dt2_right_wall * v[right_wall, 0] # NumPy Vektorisierung der Operationen mit Matrizen\n",
     "\n",
-    "    # Kollision mit oberer/unterer Wand\n",
+    "    # Kollision mit oberer/unterer Wandd\n",
     "    bottom = c_new[:, 1] <= 0\n",
     "    top = c_new[:, 1] >= ymax\n",
-    "    v[bottom | top, 1] *= -1\n",
-    "    c_new[bottom, 1] = dt * v[bottom, 1]\n",
-    "    c_new[top, 1] = ymax + dt * v[top, 1]\n",
+    "    if np.any(bottom | top):\n",
+    "        dt2_bottom = abs(c_new[bottom, 1]) / abs(v[bottom, 1])\n",
+    "        dt2_top = (abs(c_new[top, 1]) - ymax) / abs(v[top, 1])\n",
+    "        v[bottom | top, 1] *= -1\n",
+    "        c_new[bottom, 1] = dt2_bottom * v[bottom, 1]\n",
+    "        c_new[top, 1] = ymax - dt2_top * v[top, 1]\n",
     "\n",
     "    return c_new, v\n",
     "\n",
