--- a/EA1/EA1_Abgabe 26.4.ipynb
+++ b/EA1/EA1_Abgabe 26.4.ipynb
@@ -1169,7 +1169,7 @@
     "\n",
     "minimums = [min(repeat_lambda(x)) for x in f_list]    # alle kürzesten Ausführungszeiten werden in minimums gespeichert            \n",
     "\n",
-    "print(f\'{\"Funktionsaufruf\":<31}  min. Laufzeit\') \n",
+    "print(f\"{\'Funktionsaufruf\':<31}  min. Laufzeit\") \n",
     "for f, m in zip(f_list, minimums):\n",
     "    print(f\"{f:<31}: {m:.6f}\")"
    ]
@@ -1318,7 +1318,7 @@
     "\n",
     "#alle .py files werden ausgeführt in python3 um .bin Dateien zu erstellen\n",
     "for file_name in file_names:    \n",
-    "    os.system(f\'python3 {file_name.replace(\".bin\", \".py\")}\')"
+    "    os.system(f\"python3 {file_name.replace(\'.bin\', \'.py\')}\")"
    ]
   },
   {
