--- a/EA1/Abgabedateien/EA_1_Lösung_Vlad_Toni_Ahmed.ipynb
+++ b/EA1/Abgabedateien/EA_1_Lösung_Vlad_Toni_Ahmed.ipynb
@@ -1288,11 +1288,19 @@
     "\n",
     "#os.system(\"rm -rf lu_* memray-*\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "373652a1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -1306,7 +1314,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.5"
+   "version": "3.11.6"
   },
   "otter": {
    "OK_FORMAT": true,
