Textfarbe geändert, Codekommentar eingerückt

--- a/EA2/EA2_Einfaches_Pendel_Ahmed.ipynb
+++ b/EA2/EA2_Einfaches_Pendel_Ahmed.ipynb
@@ -849,6 +849,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<span style=\"color: brown;\" title=\"Ahmed\">\n",
+    "\n",
     "## Animation des Pendels\n",
     "\n",
     "In diesem Python-Skript wird die Bewegung eines Pendels simuliert und eine animierte Darstellung der Pendelbewegung erstellt. Die Simulation basiert auf den Grundgleichungen der klassischen Mechanik, speziell auf der Differentialgleichung des Pendels, die die zeitliche Entwicklung des Winkels und der Winkelgeschwindigkeit beschreibt. Anstatt eine analytische Lösung zu suchen, wird die numerische Integration der Bewegung mit der Methode des Runge-Kutta-Integrators (RK23) durchgeführt.\n",
@@ -869,12 +871,14 @@
     "\n",
     "7. **GIF-Erstellung**: Das GIF wird mit der Bibliothek `imageio` aus den einzelnen Frames der Animation erstellt und im Jupyter-Notebook angezeigt.\n",
     "\n",
-    "Dieses Skript bietet eine anschauliche Möglichkeit, die Dynamik eines Pendels zu simulieren und interaktive, animierte Visualisierungen zu erzeugen. Die numerische Lösung der Bewegung ermöglicht eine realistische Darstellung auch für größere Auslenkungen des Pendels, bei denen die Näherung für kleine Winkel nicht mehr gültig ist.\n"
+    "Dieses Skript bietet eine anschauliche Möglichkeit, die Dynamik eines Pendels zu simulieren und interaktive, animierte Visualisierungen zu erzeugen. Die numerische Lösung der Bewegung ermöglicht eine realistische Darstellung auch für größere Auslenkungen des Pendels, bei denen die Näherung für kleine Winkel nicht mehr gültig ist.\n",
+    "\n",
+    "</span>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "nbgrader": {
      "grade": false,
@@ -1100,7 +1104,7 @@
     "\n",
     "# --- Numerische Lösung mit solve_ivp und RK23 (Runge-Kutta 2(3)) ---\n",
     "sol = solve_ivp(\n",
-    "    pendel_ode,              # Differentialgleichung\n",
+    "    pendel_ode,                # Differentialgleichung\n",
     "    [0, t_max],                # Zeitintervall\n",
     "    [theta0, omega0],          # Anfangsbedingungen\n",
     "    method='RK23',             # Integrationsmethode\n",
