--- a/EA2/EA2.ipynb
+++ b/EA2/EA2.ipynb
@@ -1351,6 +1351,8 @@
     "\n",
     "_Points:_ 10\n",
     "\n",
+    "<span style=\"color: brown;\" title=\"Ahmed\">\n",
+    "\n",
     "# Lösung der Aufgabe: Einfaches Pendel mit Dämpfung\n",
     "\n",
     "In dieser Aufgabe wird die Bewegung eines **gedämpften einfachen Pendels** simuliert. Das Pendel wird durch die folgende **Differentialgleichung zweiter Ordnung** beschrieben:\n",
@@ -1414,7 +1416,9 @@
     "\n",
     "---\n",
     "\n",
-    "Dieser strukturierte Ansatz erlaubt eine anschauliche und realitätsnahe Simulation eines gedämpften Pendels – unter Berücksichtigung von Reibungsverlusten, wie sie z. B. durch Luftwiderstand entstehen."
+    "Dieser strukturierte Ansatz erlaubt eine anschauliche und realitätsnahe Simulation eines gedämpften Pendels – unter Berücksichtigung von Reibungsverlusten, wie sie z. B. durch Luftwiderstand entstehen.\n",
+    "\n",
+    "</span>"
    ]
   },
   {
@@ -1653,6 +1657,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<span style=\"color: brown;\" title=\"Ahmed\">\n",
+    "\n",
     "## Vergleich der Performance für die Methoden\n",
     "\n",
     "In dieser Aufgabe wird die Performance der verschiedenen Integrationsmethoden der Funktion `scipy.integrate.solve_ivp` verglichen. Ziel ist es, die Berechnungszeit für die numerische Lösung einer Differentialgleichung zu messen, die das Verhalten eines gedämpften Pendels beschreibt. Hierbei werden drei verschiedene Methoden verwendet: **RK45**, **RK23** und **DOP853**. Jede dieser Methoden hat unterschiedliche Eigenschaften in Bezug auf Genauigkeit und Effizienz.\n",
@@ -1669,7 +1675,9 @@
     "\n",
     "5. **Auswertung der Ergebnisse**: Am Ende wird die gemessene Zeit für jede Methode ausgegeben, um zu beurteilen, welche Methode bei der Lösung dieses spezifischen Problems am effizientesten ist.\n",
     "\n",
-    "Der Fokus dieser Aufgabe liegt auf der Analyse der Performance der verschiedenen Methoden und ihrer Eignung für die Lösung von Differentialgleichungen, die in vielen Bereichen der Physik und Ingenieurwissenschaften auftreten."
+    "Der Fokus dieser Aufgabe liegt auf der Analyse der Performance der verschiedenen Methoden und ihrer Eignung für die Lösung von Differentialgleichungen, die in vielen Bereichen der Physik und Ingenieurwissenschaften auftreten.\n",
+    "\n",
+    "</span>"
    ]
   },
   {
@@ -1778,13 +1786,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<span style=\"color: brown;\" title=\"Ahmed\">\n",
+    "\n",
     "## x- und y-Position des Pendels über die Zeit in einem Diagramm\n",
     "\n",
     "In dieser Aufgabe wird die Bewegung eines Pendels mit einer gedämpften Schwingung simuliert, wobei die Lösung der Bewegung mit der Runge-Kutta-Methode 45 (RK45) berechnet wird. Das Ziel ist es, die Position des Pendels in der x- und y-Richtung sowie den Winkel des Pendels über die Zeit hinweg zu visualisieren. \n",
     "\n",
     "Der Prozess der Lösung umfasst die folgenden Schritte:\n",
     "\n",
-    "1. **Pendelparameter**: Die physikalischen Eigenschaften des Pendels wie Länge (L), Masse (m), Dämpfungsfaktor (b), und die Erdbeschleunigung (g) werden festgelegt. Der Anfangswinkel (θ0) und die Anfangsgeschwindigkeit (ω0) sind ebenfalls vorgegeben.\n",
+    "1. **Pendelparameter**: Die physikalischen Eigenschaften des Pendels wie Länge (L), Masse (m), Dämpfungsfaktor (b), und die Erdbeschleunigung (g) werden festgelegt. Der Anfangswinkel (θ<sub>0</sub>) und die Anfangsgeschwindigkeit (ω<sub>0</sub>) sind ebenfalls vorgegeben.\n",
     "\n",
     "2. **Differentialgleichung**: Die Bewegung des Pendels wird durch eine linearisierte Differentialgleichung beschrieben, die sowohl die Winkelgeschwindigkeit als auch die Dämpfung berücksichtigt.\n",
     "\n",
@@ -1794,7 +1804,9 @@
     "   - **x- und y-Positionen**: Die Position des Pendels in der horizontalen (x) und vertikalen (y) Richtung wird in zwei separaten Diagrammen dargestellt.\n",
     "   - **Winkel**: Der Winkel des Pendels wird über die Zeit in einem dritten Diagramm angezeigt.\n",
     "\n",
-    "Ziel dieser Aufgabe ist es, die zeitliche Entwicklung der Pendelbewegung zu verstehen und zu visualisieren. Die erhaltenen Diagramme bieten Einblicke in die Schwingungsdynamik des Pendels und zeigen die Auswirkungen der Dämpfung auf seine Bewegung.\n"
+    "Ziel dieser Aufgabe ist es, die zeitliche Entwicklung der Pendelbewegung zu verstehen und zu visualisieren. Die erhaltenen Diagramme bieten Einblicke in die Schwingungsdynamik des Pendels und zeigen die Auswirkungen der Dämpfung auf seine Bewegung.\n",
+    "\n",
+    "</span>\n"
    ]
   },
   {
@@ -1939,6 +1951,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<span style=\"color: brown;\" title=\"Ahmed\">\n",
+    "\n",
     "## Unterschiede zwischen der 'RK45' Methode under der 'RK23' Methode\n",
     "\n",
     "Dieses Python-Skript simuliert das Verhalten eines gedämpften Pendels und vergleicht die Ergebnisse zweier numerischer Integrationsmethoden, um die Bewegung des Pendels über die Zeit zu berechnen und darzustellen. Das Pendel wird durch eine Differentialgleichung modelliert, die sowohl die Rückstellkraft als auch die Dämpfung berücksichtigt.\n",
@@ -1959,7 +1973,9 @@
     "   - Die Position des Pendels in der x-Richtung und y-Richtung über die Zeit.\n",
     "   - Der absolute Unterschied in den x- und y-Positionen zwischen den beiden Methoden (RK45 und RK23).\n",
     "\n",
-    "Das Ziel des Skripts ist es, die Auswirkungen unterschiedlicher Integrationsmethoden auf die Genauigkeit der Simulation und den Vergleich der Position des Pendels im Verlauf der Zeit zu analysieren. Es zeigt, wie die Wahl der numerischen Methode die Präzision in der Berechnung der Pendelbewegung beeinflussen kann.\n"
+    "Das Ziel des Skripts ist es, die Auswirkungen unterschiedlicher Integrationsmethoden auf die Genauigkeit der Simulation und den Vergleich der Position des Pendels im Verlauf der Zeit zu analysieren. Es zeigt, wie die Wahl der numerischen Methode die Präzision in der Berechnung der Pendelbewegung beeinflussen kann.\n",
+    "\n",
+    "</span>\n"
    ]
   },
   {
@@ -2135,6 +2151,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<span style=\"color: brown;\" title=\"Ahmed\">\n",
+    "\n",
     "## Animation des Pendels\n",
     "\n",
     "In diesem Python-Skript wird die Bewegung eines Pendels simuliert und eine animierte Darstellung der Pendelbewegung erstellt. Die Simulation basiert auf den Grundgleichungen der klassischen Mechanik, speziell auf der Differentialgleichung des Pendels, die die zeitliche Entwicklung des Winkels und der Winkelgeschwindigkeit beschreibt. Anstatt eine analytische Lösung zu suchen, wird die numerische Integration der Bewegung mit der Methode des Runge-Kutta-Integrators (RK23) durchgeführt.\n",
@@ -2155,12 +2173,14 @@
     "\n",
     "7. **GIF-Erstellung**: Das GIF wird mit der Bibliothek `imageio` aus den einzelnen Frames der Animation erstellt und im Jupyter-Notebook angezeigt.\n",
     "\n",
-    "Dieses Skript bietet eine anschauliche Möglichkeit, die Dynamik eines Pendels zu simulieren und interaktive, animierte Visualisierungen zu erzeugen. Die numerische Lösung der Bewegung ermöglicht eine realistische Darstellung auch für größere Auslenkungen des Pendels, bei denen die Näherung für kleine Winkel nicht mehr gültig ist.\n"
+    "Dieses Skript bietet eine anschauliche Möglichkeit, die Dynamik eines Pendels zu simulieren und interaktive, animierte Visualisierungen zu erzeugen. Die numerische Lösung der Bewegung ermöglicht eine realistische Darstellung auch für größere Auslenkungen des Pendels, bei denen die Näherung für kleine Winkel nicht mehr gültig ist.\n",
+    "\n",
+    "</span>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "nbgrader": {
      "grade": false,
@@ -2386,7 +2406,7 @@
     "\n",
     "# --- Numerische Lösung mit solve_ivp und RK23 (Runge-Kutta 2(3)) ---\n",
     "sol = solve_ivp(\n",
-    "    pendel_ode,              # Differentialgleichung\n",
+    "    pendel_ode,                # Differentialgleichung\n",
     "    [0, t_max],                # Zeitintervall\n",
     "    [theta0, omega0],          # Anfangsbedingungen\n",
     "    method='RK23',             # Integrationsmethode\n",
