Einleitung zur Lösung der ersten Teilaufgabe bearbeitet

--- a/EA2/EA2.ipynb
+++ b/EA2/EA2.ipynb
@@ -1353,70 +1353,30 @@
     "\n",
     "<span style=\"color: brown;\" title=\"Ahmed\">\n",
     "\n",
-    "# Lösung der Aufgabe: Einfaches Pendel mit Dämpfung\n",
+    "## Lösung der Aufgabe: Einfaches Pendel mit Dämpfung\n",
     "\n",
-    "In dieser Aufgabe wird die Bewegung eines **gedämpften einfachen Pendels** simuliert. Das Pendel wird durch die folgende **Differentialgleichung zweiter Ordnung** beschrieben:\n",
+    "Zur Simulation eines gedämpften Pendels verwenden wir die linearisierte Bewegungsgleichung:\n",
     "\n",
-    "$\\theta''(t) + \\frac{b}{m} \\theta'(t) + \\frac{g}{L} \\theta(t) = 0$\n",
+    "$ \\theta''(t) + \\frac{b}{m} \\theta'(t) + \\frac{g}{L} \\theta(t) = 0 $\n",
     "\n",
-    "bzw.\n",
+    "Diese Differentialgleichung zweiter Ordnung wird als System erster Ordnung formuliert:\n",
     "\n",
-    "$\\alpha(t) + \\frac{b}{m} \\omega(t) + \\frac{g}{L} \\theta(t) = 0$\n",
+    "$ \n",
+    "\\begin{cases}\n",
+    "y_0' = y_1 \\\\\n",
+    "y_1' = -\\frac{b}{m} y_1 - \\frac{g}{L} y_0\n",
+    "\\end{cases}\n",
+    "\\quad \\text{mit } y_0 = \\theta(t),\\ y_1 = \\theta'(t)\n",
+    "$\n",
     "\n",
-    "Dabei bedeuten:\n",
+    "Zur Lösung nutzen wir `solve_ivp` aus `scipy.integrate` mit folgenden Parametern:\n",
     "\n",
-    "- $\\theta(t)$: Winkel des Pendels zur Vertikalen in Radiant  \n",
-    "- $\\omega(t) = \\theta'(t)$: Winkelgeschwindigkeit  \n",
-    "- $\\alpha(t) = \\theta''(t)$: Winkelbeschleunigung  \n",
-    "- $b$: Dämpfungskoeffizient (z. B. durch Luftwiderstand)  \n",
-    "- $m$: Masse des Pendelkörpers  \n",
-    "- $g$: Erdbeschleunigung  \n",
-    "- $L$: Länge des Pendels  \n",
+    "- Anfangswinkel: $ \\theta(0) = \\frac{\\pi}{3} $\n",
+    "- Anfangsgeschwindigkeit: $ \\theta'(0) = 0 $\n",
+    "- Zeitintervall: $ t \\in [0, 15] $\n",
+    "- Anzahl Zeitschritte: 20.000\n",
     "\n",
-    "---\n",
-    "\n",
-    "### Ziel der Aufgabe\n",
-    "\n",
-    "Wir möchten die Bewegung des Pendels im Zeitbereich $t = 0$ bis $t = 15$ Sekunden simulieren – und zwar mit **20.000 Zeitschritten** für eine möglichst feine zeitliche Auflösung. Dafür verwenden wir die numerische Methode `solve_ivp` aus `scipy.integrate`, welche ein **System von Differentialgleichungen erster Ordnung** löst.\n",
-    "\n",
-    "---\n",
-    "\n",
-    "### Umformulierung in ein System erster Ordnung\n",
-    "\n",
-    "Da `solve_ivp` nur Gleichungen erster Ordnung lösen kann, muss die Gleichung zweiter Ordnung umgeschrieben werden. Dazu setzen wir:\n",
-    "\n",
-    "- $y_0 = \\theta(t)$: Winkel  \n",
-    "- $y_1 = \\theta'(t)$: Winkelgeschwindigkeit  \n",
-    "\n",
-    "Damit ergibt sich das folgende System:\n",
-    "\n",
-    "$y_0' = y_1$  \n",
-    "$y_1' = -\\frac{b}{m} y_1 - \\frac{g}{L} y_0$\n",
-    "\n",
-    "Dieses System beschreibt die zeitliche Entwicklung des Pendels vollständig und ist bereit zur numerischen Lösung.\n",
-    "\n",
-    "---\n",
-    "\n",
-    "### Erläuterung des Codes\n",
-    "\n",
-    "1. **Parameterdefinition:** Die physikalischen Konstanten wie Pendellänge $L$, Masse $m$, Dämpfungskoeffizient $b$ und Erdbeschleunigung $g$ werden gesetzt.\n",
-    "\n",
-    "2. **Zeitvektor:** Mit `np.linspace(0, 15, 20000)` wird ein Array von Zeitpunkten erzeugt, an denen das System berechnet wird.\n",
-    "\n",
-    "3. **Modellierung des Systems:** Die Funktion `pendel(t, y)` bildet das oben beschriebene Gleichungssystem ab. Sie gibt die Ableitungen von Winkel und Winkelgeschwindigkeit zurück.\n",
-    "\n",
-    "4. **Numerische Lösung:** `solve_ivp` berechnet aus den Anfangswerten (Startwinkel $\\theta = \\frac{\\pi}{3}$, Anfangsgeschwindigkeit $= 0$) die Entwicklung des Systems über die Zeit mithilfe eines Runge-Kutta-Verfahrens (`RK45`).\n",
-    "\n",
-    "5. **Berechnung der Position:** Aus dem berechneten Winkel $\\theta(t)$ werden mit Hilfe der bekannten Formeln für Kreisbewegung die kartesischen Koordinaten des Pendelkörpers berechnet:\n",
-    "\n",
-    "$x(t) = L \\cdot \\sin(\\theta(t))$  \n",
-    "$y(t) = -L \\cdot \\cos(\\theta(t))$\n",
-    "\n",
-    "6. **Visualisierung:** Die Pendelbewegung wird in einem x-y-Diagramm dargestellt, wodurch die oszillierende und gedämpfte Bewegung deutlich sichtbar wird.\n",
-    "\n",
-    "---\n",
-    "\n",
-    "Dieser strukturierte Ansatz erlaubt eine anschauliche und realitätsnahe Simulation eines gedämpften Pendels – unter Berücksichtigung von Reibungsverlusten, wie sie z. B. durch Luftwiderstand entstehen.\n",
+    "Aus der Lösung berechnen wir die Position des Pendels in der x-y-Ebene und stellen Bahn, Zeitverlauf und Phasenraum grafisch dar.\n",
     "\n",
     "</span>"
    ]
