Erläuterung zur solve_ivp überarbeitet

--- a/EA2/EA2.ipynb
+++ b/EA2/EA2.ipynb
@@ -1383,7 +1383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "nbgrader": {
      "grade": false,
@@ -1428,175 +1428,106 @@
     }
    ],
    "source": [
-    "import numpy as np                      # Numpy wird für die numerischen Berechnungen benötigt (z.B. sin, cos, linspace)\n",
-    "from scipy.integrate import solve_ivp   # SciPy wird genutzt, um das Anfangswertproblem zu lösen\n",
-    "import matplotlib.pyplot as plt         # Matplotlib wird für die grafische Darstellung der Ergebnisse verwendet\n",
-    "import matplotlib.patches as patches    # Für den Winkelbogen (Zeichnung im Diagramm am Ende)\n",
+    "import numpy as np                      # Für numerische Berechnungen, z.B. sin, cos, linspace\n",
+    "from scipy.integrate import solve_ivp   # Für die Lösung des Anfangswertproblems (DGL)\n",
     "\n",
     "# Parameter\n",
     "L = 1                   # Pendellänge in Metern\n",
     "m = 1                   # Masse des Pendels in kg\n",
-    "b = 0.5                 # Dämpfung in Ns·m/rad (vereinfacht als lineare Dämpfung für Rotationssystem behandelt)\n",
+    "b = 0.5                 # Dämpfung in Ns·m/rad\n",
     "g = 9.81                # Erdbeschleunigung in m/s²\n",
-    "steps = 20000           # Anzahl der Zeitschritte für die Simulation (hohe Auflösung)\n",
+    "steps = 20000           # Anzahl der Zeitschritte für die Simulation\n",
     "t_max = 15              # Maximale Simulationszeit in Sekunden\n",
     "theta0 = np.pi / 3      # Anfangswinkel des Pendels (60° in Radiant)\n",
-    "omega0 = 0              # Anfangsgeschwindigkeit (ω0 = θ'(t=0) = (dθ/dt|t=0) = 0); Pendel startet aus dem Stillstand ohne Anfangsgeschwindigkeit (nur Anfangsauslenkung theta0)\n",
+    "omega0 = 0              # Anfangsgeschwindigkeit (ω0 = 0)\n",
     "\n",
     "# Zeitpunkte für die Auswertung\n",
-    "# t_eval enthält 20.000 gleichmäßig verteilte Zeitpunkte zwischen 0 und t_max\n",
-    "# Diese Zeitpunkte werden später an die Funktion solve_ivp übergeben, damit die Lösung\n",
-    "# des Differentialgleichungssystems an diesen Zeitpunkten berechnet wird.\n",
-    "t_eval = np.linspace(0, t_max, steps) \n",
+    "t_eval = np.linspace(0, t_max, steps)  # 20.000 gleichmäßig verteilte Zeitpunkte zwischen 0 und t_max\n",
     "\n",
-    "# Definition des Differentialgleichungssystems in erster Ordnung (linearisierte Pendelgleichung)\n",
-    "# Die Pendelbewegung wird als System von zwei Gleichungen erster Ordnung formuliert:\n",
-    "# y[0] = θ (Winkelposition) und y[1] = ω (Winkelgeschwindigkeit)\n",
-    "# Gesucht: dθ/dt = ω und dω/dt = -(b/m) * ω - (g/L) * θ\n",
+    "# Definition des Differentialgleichungssystems (System erster Ordnung)\n",
     "def pendel(t, y):\n",
     "    \"\"\"\n",
-    "    Diese Funktion beschreibt die Pendelbewegung als System von zwei Differentialgleichungen erster Ordnung:\n",
+    "    Diese Funktion beschreibt das System der Pendelbewegung als zwei gekoppelte Differentialgleichungen erster Ordnung:\n",
     "    1. dθ/dt = ω (Winkelgeschwindigkeit)\n",
-    "    2. dω/dt = -(b/m) * ω - (g/L) * θ (gedämpfte Schwingung, linearisierte Pendelgleichung)\n",
-    "\n",
+    "    2. dω/dt = -(b/m) * ω - (g/L) * θ (gedämpfte Schwingung)\n",
+    "    \n",
     "    Inputs:\n",
-    "    - t (float): Der aktuelle Zeitpunkt. \n",
-    "        - Dieser Wert wird vom Solver `solve_ivp` übergeben. Obwohl der Zeitpunkt nicht direkt in den Berechnungen verwendet wird,\n",
-    "        ist er erforderlich, damit der Solver das Problem korrekt lösen kann, da `solve_ivp` den aktuellen Zeitpunkt benötigt,\n",
-    "        um die numerische Lösung über die Zeit zu berechnen.\n",
-    "\n",
-    "    - y (List[float]): Ein Vektor mit zwei Werten:\n",
+    "    - t: Der aktuelle Zeitpunkt (wird vom Solver übergeben, ist aber für die Berechnungen hier nicht direkt notwendig).\n",
+    "    - y: Vektor [θ, ω], wobei:\n",
     "        - y[0] = θ (Winkel des Pendels in Radiant)\n",
-    "        - y[1] = ω (Winkelgeschwindigkeit in Rad/s)\n",
-    "        - Dieser Vektor enthält die aktuellen Werte der Variablen des Systems und wird ebenfalls vom Solver `solve_ivp` bei jedem Schritt\n",
-    "        an die Funktion übergeben.\n",
-    "\n",
+    "        - y[1] = ω (Winkelgeschwindigkeit in rad/s)\n",
+    "    \n",
     "    Outputs:\n",
-    "    - List[float]: Ein Vektor mit den Ableitungen von θ und ω:\n",
-    "        - [dθ/dt, dω/dt] = [ω, -(b/m) * ω - (g/L) * θ]\n",
-    "        - Der erste Wert ist die Winkelgeschwindigkeit ω, also die Ableitung von θ nach der Zeit.\n",
-    "        - Der zweite Wert ist die Winkelbeschleunigung dω/dt, die durch die linearisierte Pendelgleichung berechnet wird.\n",
-    "        - Diese Ausgaben werden vom Solver `solve_ivp` verwendet, um die nächste Zeitstufe der Lösung zu berechnen.\n",
+    "    - List[float]: [dθ/dt, dω/dt] = [ω, -(b/m) * ω - (g/L) * θ]\n",
     "    \"\"\"\n",
+    "    # Extraktion der aktuellen Werte für Winkel (θ) und Winkelgeschwindigkeit (ω)\n",
+    "    theta, omega = y \n",
+    "    \n",
+    "    # Berechnung der Winkelbeschleunigung (α = dω/dt)\n",
+    "    alpha = -(b / m) * omega - (g / L) * theta\n",
     "\n",
-    "    theta, omega = y # Entpacken des Zustandsvektors y = [θ, θ'] = [θ, ω]\n",
+    "    # Rückgabe der Ableitungen\n",
+    "    return [omega, alpha]  # [dθ/dt, dω/dt] = [ω, α]\n",
     "\n",
-    "    # Die zweite Ableitung von θ (d²θ/dt² = dω/dt = α. Winkelbeschleunigung) basiert auf der linearen Bewegungsgleichung\n",
-    "    # α = dω/dt = -(b/m) * ω - (g/L) * θ (gedämpfte harmonische Schwingung)\n",
-    "    alpha = -(b / m) * omega - (g / L) * theta  # dω/dt = - (b/m) * ω - (g/L) * θ\n",
+    "# Numerische Lösung des Systems mit 'solve_ivp' (Runge-Kutta-Verfahren)\n",
+    "sol = solve_ivp(fun=pendel,             # Funktion für das Differentialgleichungssystem (pendel)\n",
+    "                t_span=[0, t_max],      # Zeitintervall [Startzeit, Endzeit]\n",
+    "                y0=[theta0, omega0],    # Anfangszustand [θ(0), ω(0)] (Anfangswinkel und Anfangsgeschwindigkeit)\n",
+    "                t_eval=t_eval,          # Zeitpunkte, für die die Lösung berechnet wird\n",
+    "                method='RK45')          # Runge-Kutta-Verfahren (4. & 5. Ordnung), das für gewöhnliche DGL verwendet wird\n",
     "\n",
-    "    # Rückgabe der beiden Ableitungen als Liste\n",
-    "    return [omega, alpha] # [dθ/dt, dω/dt] = [ω, α]\n",
+    "# Rückgabe der Lösung: Die numerischen Ergebnisse für θ(t) und ω(t) werden in 'sol' gespeichert\n",
+    "theta = sol.y[0]  # Winkel θ(t) über der Zeit (Lösung für den Winkel)\n",
+    "omega = sol.y[1]  # Winkelgeschwindigkeit ω(t) über der Zeit (Lösung für die Geschwindigkeit)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<span style=\"color: brown;\" title=\"Ahmed\">\n",
     "\n",
-    "# Numerische Lösung des Differentialgleichungssystems mit solve_ivp (Runge-Kutta-Verfahren)\n",
-    "# solve_ivp löst das Anfangswertproblem für gewöhnliche Differentialgleichungen\n",
-    "# Der Rückgabewert 'sol' enthält die numerische Lösung der Gleichungen über den angegebenen Zeitraum\n",
-    "# Anfangswerte: θ(0) = theta0, ω(0) = omega0\n",
-    "sol = solve_ivp(pendel,             # Funktion, die das Differentialgleichungssystem beschreibt\n",
-    "                [0, t_max],         # Zeitintervall [Startzeit, Endzeit] für die Berechnung\n",
-    "                [theta0, omega0],   # Anfangszustand: [θ(0), ω(0)] = [theta0, omega0] = [np.pi / 3, 0] (Start aus der Ruheposition)\n",
-    "                t_eval=t_eval,      # Zeitpunkte, an denen die Lösung berechnet werden soll\n",
-    "                method='RK45')      # Das Runge-Kutta-Verfahren (4. & 5. Ordnung) zur numerischen Lösung\n",
+    "### Erläuterung der Rückgabewerte von `solve_ivp`\n",
     "\n",
-    "# Berechnung der Positionen des Pendels in der x-y-Ebene basierend auf den Winkeln θ(t)\n",
-    "# Um den Pendelkörper im Raum zu beschreiben, benötigen wir die kartesischen Koordinaten\n",
-    "# mit den Beziehungen: x = L * sin(θ) und y = -L * cos(θ), wobei das Pendel am Ursprung (0, 0) befestigt ist.\n",
-    "theta = sol.y[0]        # θ(t): Die Winkelpositionen des Pendels zu den jeweiligen Zeitpunkten\n",
-    "x = L * np.sin(theta)   # Berechnung der x-Position: x(t) = L * sin(θ(t)). Dies beschreibt, wie weit der Pendelkörper horizontal (also in Richtung der x-Achse) von der Aufhängung entfernt ist, abhängig vom Winkel θ.\n",
-    "y = -L * np.cos(theta)  # Berechnung der y-Position: y(t) = -L * cos(θ(t)). Dies beschreibt, wie weit der Pendelkörper in vertikaler Richtung (also in Richtung der y-Achse) von der Aufhängung entfernt ist. Das negative Vorzeichen sorgt dafür, dass sich der Pendelkörper nach unten bewegt, da die y-Achse nach oben zeigt.\n",
+    "Die Funktion [`solve_ivp`](https://docs.scipy.org/doc/scipy/reference/generated/scipy.integrate.solve_ivp.html) löst das Anfangswertproblem eines Systems von Differentialgleichungen numerisch und gibt ein [Bunch](https://scikit-learn.org/stable/modules/generated/sklearn.utils.Bunch.html) (ähnlich wie [Dictionary](https://python-reference.readthedocs.io/en/latest/docs/dict/)) zurück. Die wichtigsten Rückgabewerte im Bunch-Objekt sind:\n",
+    "\n",
+    "1. [**`sol.t`** `ndarray, shape (n_points,)`](https://docs.scipy.org/doc/scipy/reference/generated/scipy.integrate.solve_ivp.html#:~:text=tndarray%2C%20shape,Time%20points.):\n",
+    "   - Ein Array mit den **Zeitpunkten**, an denen die Lösung des Differentialgleichungssystems berechnet wurde.\n",
+    "   - Diese Zeitpunkte können **abweichen** von den Werten, die ursprünglich mit `t_eval` angegeben wurden. Der Solver wählt automatisch die Zeitpunkte, an denen er die Lösung für das System berechnet, basierend auf seiner numerischen Methode (z.B. Runge-Kutta). Das bedeutet, dass `sol.t` nicht unbedingt mit dem ursprünglich vorgegebenen `t_eval`-Array identisch ist, sondern eine angepasste Zeitauflösung basierend auf den Berechnungen darstellt.\n",
+    "\n",
+    "2. [**`sol.y`** `ndarray, shape (n, n_points)`](https://docs.scipy.org/doc/scipy/reference/generated/scipy.integrate.solve_ivp.html#:~:text=yndarray%2C%20shape,solution%20at%20t):\n",
+    "\n",
+    "   - Ein **2D-Array**, das die Lösungen für die Zustandsgrößen des Systems enthält:\n",
+    "     - `n` ist die Anzahl der Zustandsgrößen im System (in diesem Fall 2: der Winkel $\\theta(t)$ und die Winkelgeschwindigkeit $\\omega(t)$).\n",
+    "     - `n_points` ist die Anzahl der Zeitpunkte, an denen die Lösung berechnet wurde (entspricht der Länge von `t_eval`).\n",
+    "     \n",
+    "     Das Array `sol.y` hat also die Form (n, n\\_points), wobei:\n",
+    "     - **`sol.y[0]`**: Ein Array mit den **Winkelpositionen** $\\theta(t)$ des Pendels zu den entsprechenden Zeitpunkten in `sol.t`. Dies beschreibt, wie sich der Winkel des Pendels im Laufe der Zeit ändert.\n",
+    "     - **`sol.y[1]`**: Ein Array mit den **Winkelgeschwindigkeiten** $\\omega(t)$ des Pendels zu den entsprechenden Zeitpunkten in `sol.t`. Dies beschreibt, wie sich die Geschwindigkeit der Pendelbewegung im Laufe der Zeit ändert.\n",
+    "\n",
+    "Die Werte in **`sol.y[0]`** und **`sol.y[1]`** sind somit die numerisch berechneten Lösungen für das System von Differentialgleichungen, wobei:\n",
+    "- **θ(t)** der Winkel des Pendels zur Vertikalen ist,\n",
+    "- **ω(t)** die Winkelgeschwindigkeit des Pendels ist.\n",
+    "\n",
+    "**Beispiel**:  \n",
+    "Angenommen, das Pendel startet mit einem Anfangswinkel `theta_0 = pi/3` (60°) und einer Anfangsgeschwindigkeit `omega_0 = 0`. Es sollen `n_points = 20000` Werte im Zeitintervall von `t = 0` bis `t = 15` Sekunden berechnet werden. Dann gilt:\n",
+    "\n",
+    "- `sol.t` ist ein Array mit 20000 gleichmäßig verteilten Zeitpunkten im Intervall `[0, 15]`, z. B. ist `sol.t[0] = 0.0` (Startzeitpunkt) und `sol.t[-1] = 15.0` (Endzeitpunkt).\n",
+    "\n",
+    "- `sol.y` ist ein 2D-Array der Form `(2, 20000)`:\n",
+    "  - `sol.y[0]` enthält die berechneten Werte des Winkels `theta(t)` zu jedem Zeitpunkt in `sol.t`. Zum Beispiel:\n",
+    "    - `sol.y[0][0]` ist der Anfangswinkel `theta_0 = pi/3`\n",
+    "    - `sol.y[0][10000]` ist der Winkel zur Zeit `sol.t[10000]`\n",
+    "  - `sol.y[1]` enthält die berechneten Werte der Winkelgeschwindigkeit `omega(t)` zu denselben Zeitpunkten. Zum Beispiel:\n",
+    "    - `sol.y[1][0]` ist die Anfangsgeschwindigkeit `omega_0 = 0`\n",
+    "    - `sol.y[1][10000]` ist die Winkelgeschwindigkeit zur Zeit `sol.t[10000]`\n",
+    "\n",
+    "- Auf beide Zustandsgrößen zum Zeitpunkt `t_i` kann auch mit `sol.y[:, i]` zugegriffen werden:\n",
+    "  - Die Winkelposition: `theta(t_i) = sol.y[0][i]`\n",
+    "  - Die Winkelgeschwindigkeit: `omega(t_i) = sol.y[1][i]`\n",
     "\n",
     "\n",
-    "# ================================================================\n",
-    "# VISUALISIERUNG DER PENDLELBEWEGUNG UND ZEITVERLÄUFE\n",
-    "# ================================================================\n",
-    "\n",
-    "# -----------------------------\n",
-    "# Plot 1: Pendelbahn in der x-y-Ebene\n",
-    "# -----------------------------\n",
-    "# Dieser Plot zeigt die reale Bahn des Pendels in der 2D-Ebene.\n",
-    "\n",
-    "plt.figure(figsize=(14, 6))  # Großes Format für bessere Darstellung\n",
-    "plt.plot(x, y, label='Pendelbahn')  # Bahnkurve des Pendels\n",
-    "plt.xlabel('x [m]')  # x-Achse: horizontale Auslenkung\n",
-    "plt.ylabel('y [m]')  # y-Achse: vertikale Position\n",
-    "plt.title('Bewegung des gedämpften Pendels (linearisiert)')  # Titel\n",
-    "plt.axis('equal')  # Gleiche Skalierung der Achsen (Kreisbahn korrekt dargestellt)\n",
-    "plt.grid(True)     # Gitternetz für bessere Lesbarkeit\n",
-    "\n",
-    "origin = (0, 0)  # Koordinatenursprung = Aufhängepunkt\n",
-    "\n",
-    "# --- Startposition markieren ---\n",
-    "plt.plot(x[0], y[0], 'ro', label='Startposition')  # Roter Punkt am Anfang\n",
-    "plt.annotate(f'Start\\n(θ₀ = {np.degrees(theta0):.0f}°)',  # Winkel in Grad\n",
-    "             xy=(x[0], y[0]), xytext=(x[0] + 0.2, y[0] + 0.1),\n",
-    "             arrowprops=dict(arrowstyle='->', color='red'),\n",
-    "             fontsize=10, color='red')\n",
-    "\n",
-    "# --- Linien vom Ursprung zu Startposition ---\n",
-    "plt.plot([origin[0], x[0]], [origin[1], y[0]], 'r-.', label='Startlinie')  # Rot gestrichelt\n",
-    "\n",
-    "# --- Winkelbogen θ₀ einzeichnen ---\n",
-    "theta0_deg = np.degrees(theta0)  # Umrechnung in Grad für Darstellung\n",
-    "arc_radius = 0.5  # Radius des Winkelbogens\n",
-    "arc = patches.Arc(origin, arc_radius, arc_radius, angle=0,\n",
-    "                  theta1=-90, theta2=-90 + theta0_deg,\n",
-    "                  color='red', linewidth=1.5)\n",
-    "plt.gca().add_patch(arc)  # Bogen ins aktuelle Achsenobjekt einfügen\n",
-    "plt.plot([0,0], [0,-1], 'b--') # Vertikale Linie\n",
-    "\n",
-    "# --- Beschriftung θ₀ am Winkelbogen platzieren ---\n",
-    "theta_mid_rad = np.radians(-90 + theta0_deg / 2)  # Mittelwertwinkel für Textposition\n",
-    "label_radius = arc_radius * 0.65  # Etwas näher am Ursprung als der Bogen selbst\n",
-    "x_label = label_radius * np.cos(theta_mid_rad)\n",
-    "y_label = label_radius * np.sin(theta_mid_rad)\n",
-    "plt.text(x_label, y_label, r'$\\theta_0$', fontsize=12, color='red',\n",
-    "         ha='center', va='center')  # Mathematischer Winkel in LaTeX\n",
-    "\n",
-    "plt.legend(loc='upper left')  # Legende platzieren\n",
-    "plt.show()  # Plot anzeigen\n",
-    "\n",
-    "# -----------------------------\n",
-    "# Plot 2: Zeitverlauf von Winkel θ(t) und Winkelgeschwindigkeit ω(t)\n",
-    "# -----------------------------\n",
-    "# Darstellung der Zustandsgrößen über die Zeit in zwei Teilplots\n",
-    "\n",
-    "plt.figure(figsize=(12, 4))  # Querformat für nebeneinander liegende Plots\n",
-    "\n",
-    "# --- Subplot links: θ(t) ---\n",
-    "plt.subplot(1, 2, 1)\n",
-    "plt.plot(sol.t, sol.y[0], color='tab:blue')  # θ(t)\n",
-    "plt.title('Winkelverlauf θ(t)')\n",
-    "plt.xlabel('Zeit [s]')\n",
-    "plt.ylabel('Winkel [rad]')\n",
-    "plt.grid(True)\n",
-    "\n",
-    "# --- Subplot rechts: ω(t) ---\n",
-    "plt.subplot(1, 2, 2)\n",
-    "plt.plot(sol.t, sol.y[1], color='tab:orange')  # ω(t)\n",
-    "plt.title('Winkelgeschwindigkeit ω(t)')\n",
-    "plt.xlabel('Zeit [s]')\n",
-    "plt.ylabel('Winkelgeschwindigkeit [rad/s]')\n",
-    "plt.grid(True)\n",
-    "\n",
-    "plt.tight_layout()  # Optimiert Abstand zwischen den beiden Plots\n",
-    "plt.show()\n",
-    "\n",
-    "# -----------------------------\n",
-    "# Plot 3: Phasenraumdarstellung θ vs. ω\n",
-    "# -----------------------------\n",
-    "# Dieser Plot zeigt den Zustand des Systems im Phasenraum\n",
-    "# (Winkel vs. Winkelgeschwindigkeit), was besonders für die\n",
-    "# Analyse des dynamischen Verhaltens nützlich ist.\n",
-    "\n",
-    "plt.figure(figsize=(6, 5))\n",
-    "plt.plot(sol.y[0], sol.y[1], color='tab:purple')  # θ gegen ω\n",
-    "plt.xlabel('θ [rad]')\n",
-    "plt.ylabel('ω [rad/s]')\n",
-    "plt.title('Phasenraumdiagramm: Winkel vs. Winkelgeschwindigkeit')\n",
-    "plt.grid(True)\n",
-    "plt.axhline(0, color='gray', linewidth=0.8, linestyle='--')  # Nulllinie ω = 0\n",
-    "plt.axvline(0, color='gray', linewidth=0.8, linestyle='--')  # Nulllinie θ = 0\n",
-    "plt.show()\n"
+    "<span>\n"
    ]
   },
   {
