Textverbesserungen bei der ersten Teilaufgabe

--- a/EA2/EA2.ipynb
+++ b/EA2/EA2.ipynb
@@ -1371,10 +1371,13 @@
     "\n",
     "Zur Lösung nutzen wir `solve_ivp` aus `scipy.integrate` mit folgenden Parametern:\n",
     "\n",
-    "- Anfangswinkel: $ \\theta(0) = \\frac{\\pi}{3} $\n",
-    "- Anfangsgeschwindigkeit: $ \\theta'(0) = 0 $\n",
-    "- Zeitintervall: $ t \\in [0, 15] $\n",
-    "- Anzahl Zeitschritte: 20.000\n",
+    "| Parameter              | Wert                  | Beschreibung                                      |\n",
+    "|------------------------|------------------------|---------------------------------------------------|\n",
+    "| `theta_0`              | `pi/3`                 | Anfangswinkel des Pendels                         |\n",
+    "| `omega_0`              | `0`                    | Anfangsgeschwindigkeit des Pendels                |\n",
+    "| `t_span`               | `[0, 15]`              | Zeitintervall der Simulation (in Sekunden)        |\n",
+    "| `n_points`             | `20000`                | Anzahl der Zeitpunkte zur Auswertung              |\n",
+    "\n",
     "\n",
     "Aus der Lösung berechnen wir die Position des Pendels in der x-y-Ebene und stellen Bahn, Zeitverlauf und Phasenraum grafisch dar.\n",
     "\n",
@@ -1506,8 +1509,11 @@
     "     - **`sol.y[1]`**: Ein Array mit den **Winkelgeschwindigkeiten** $\\omega(t)$ des Pendels zu den entsprechenden Zeitpunkten in `sol.t`. Dies beschreibt, wie sich die Geschwindigkeit der Pendelbewegung im Laufe der Zeit ändert.\n",
     "\n",
     "Die Werte in **`sol.y[0]`** und **`sol.y[1]`** sind somit die numerisch berechneten Lösungen für das System von Differentialgleichungen, wobei:\n",
-    "- **θ(t)** der Winkel des Pendels zur Vertikalen ist,\n",
-    "- **ω(t)** die Winkelgeschwindigkeit des Pendels ist.\n",
+    "| Ausdruck           | Bedeutung                                      |\n",
+    "|--------------------|-----------------------------------------------|\n",
+    "| `sol.y[0][i]`      | Winkelposition θ(t) zum Zeitpunkt `sol.t[i]`   |\n",
+    "| `sol.y[1][i]`      | Winkelgeschwindigkeit ω(t) zum Zeitpunkt `sol.t[i]` |\n",
+    "\n",
     "\n",
     "**Beispiel**:  \n",
     "Angenommen, das Pendel startet mit einem Anfangswinkel `theta_0 = pi/3` (60°) und einer Anfangsgeschwindigkeit `omega_0 = 0`. Es sollen `n_points = 20000` Werte im Zeitintervall von `t = 0` bis `t = 15` Sekunden berechnet werden. Dann gilt:\n",
@@ -1525,7 +1531,6 @@
     "- Auf beide Zustandsgrößen zum Zeitpunkt `t_i` kann auch mit `sol.y[:, i]` zugegriffen werden:\n",
     "  - Die Winkelposition: `theta(t_i) = sol.y[0][i]`\n",
     "  - Die Winkelgeschwindigkeit: `omega(t_i) = sol.y[1][i]`\n",
-    "\n",
     "\n",
     "<span>\n"
    ]
