--- a/EA2/EA2.ipynb
+++ b/EA2/EA2.ipynb
@@ -1650,9 +1650,9 @@
    "source": [
     "<span style=\"color: brown;\" title=\"Ahmed\">\n",
     "\n",
-    "## x- und y-Position des Pendels über die Zeit in einem Diagramm\n",
+    "## Plotten der Pendelparameter\n",
     "\n",
-    "In dieser Aufgabe wird die Bewegung eines gedämpften Pendels über die Zeit visualisiert. Es sollen zwei Diagramme erstellt werden: Eines für die x- und y-Position des Pendels sowie ein weiteres für den Winkel des Pendels über die Zeit. Die Berechnungen basieren auf der numerischen Lösung des Pendelsystems unter Verwendung der `RK45` Methode, die bereits in einer vorherigen Aufgabe implementiert wurde. Hierbei wird die `solve_ivp` Funktion von `scipy.integrate` verwendet, um das Differentialgleichungssystem zu lösen. \n",
+    "In dieser Aufgabe wird die Bewegung eines gedämpften Pendels über die Zeit visualisiert. Dazu werden zwei Diagramme erstellt: eines für die x- und y-Position des Pendels sowie eines für den Winkelverlauf über der Zeit. Die Berechnungen basieren auf der numerischen Lösung des Differentialgleichungssystems mit der Methode `RK45`, die mithilfe von `solve_ivp` aus `scipy.integrate` durchgeführt wird. Weitere optionale Diagramme zeigen die Winkelgeschwindigkeit und die Winkelbeschleunigung über die Zeit sowie das sogenannte Phasendiagramm.\n",
     "\n",
     "</span>\n"
    ]
